--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-streamlit
-pandas
-numpy
-matplotlib
-scikit-learn
-dataclasses
-plotly
-openai
-rank_bm25
+streamlit==1.29.0
+pandas==2.1.3
+numpy==1.24.3
+tensorflow==2.15.0
+plotly==5.18.0
+scikit-learn==1.3.2
+statsmodels==0.14.0
