--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.29.0
-pandas==2.1.3
-numpy==1.24.3
-tensorflow==2.15.0
-plotly==5.18.0
+# requirements.txt - MINIMAL VERSION
+streamlit==1.31.0
+pandas==2.1.4
+numpy==1.26.2
+tensorflow-cpu==2.15.0  # Use CPU version, 90% smaller
 scikit-learn==1.3.2
-statsmodels==0.14.0
+plotly==5.18.0
